--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mollaizet/react-image-editor",
   "private": false,
-  "version": "1.1.2",
+  "version": "1.1.4",
   "description": "Professional React image editor component with blur, crop, shapes, text, drawing, and undo/redo functionality. Built with Fabric.js and modern React patterns.",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -15,7 +15,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "build:lib": "rollup -c",
+    "build:lib": "rollup -c && node scripts/generate-index-dts.js",
     "prepublishOnly": "npm run build:lib"
   },
   "keywords": [
